mirage_site/static/mirage_site/css/layouts/blog.css
/* ... */
.vendor_detail_table td{
    vertical-align:middle; 
    background-color:#ffffff;
    border:1px solid #cecece;
    border-width:1px 1px 1px 1px;
    text-align:center;
    padding:10px;
    font-size:10px;
    color:#000000;
    font-family: 'Raleway';
    font-weight:600;
}

}.vendor_detail_table tr:last-child td{
    border-width:1px 1px 1px 1px;
}.vendor_detail_table tr td:last-child{
    border-width:1px 1px 1px 1px;
}.vendor_detail_table tr:last-child td:last-child{
    border-width:1px 1px 1px 1px;
}
.vendor_detail_table tr:first-child td{
    background-color:#4A85A3;
    border:1px solid #cecece;
    text-align:center;
    border-width:0px 0px 1px 1px;
    font-size:14px;
    color:#ffffff;
}
.vendor_detail_table tr:first-child:hover td{
    background-color:#4A85A3;
}
.vendor_detail_table tr:first-child td:first-child{
    border-width:0px 0px 1px 0px;
}
.vendor_detail_table tr:first-child td:last-child{
    border-width:0px 0px 1px 1px;
}



/* Contract History Styles */

.arrow-up {
    background:url(../../images/arrow_up.png);
    background-repeat: no-repeat;
    background-position:right;
    background-position: 93% 50%;
}
.arrow-down {
    background:url(../../images/arrow_down.png);
    background-repeat: no-repeat;
    background-position:right;
    background-position: 93% 50%;
}
.arrow-sortable {
    background:url(../../images/arrow_sortable.png);
    background-repeat: no-repeat;
    background-position:right;
    background-position: 93% 50%;
}
.active_sort    {
    font-weight: 700;
    color:#002f63 !important;
}
.contracthistory {
    margin:0px;padding:0px;
    
    border:1px solid #e5e5e5;
    margin-top:5px;

}
.contracthistory table{
    border-collapse: collapse;
        border-spacing: 0;
    width:1100px;
    height:100%;
    margin:0px;padding:0px;
    table-layout: fixed;

}
.contracthistory tr:hover td{
    background-color:#eeeeee;
}
.contracthistory td{
    vertical-align:middle;
    background-color:#ffffff;
    border:1px solid #e5e5e5;
    border-width:0px 1px 1px 0px;
    text-align:center;
    padding:10px;
    font-size:.9em;
    font-family:;
    font-weight:normal;
    color:#666666;
}.contracthistory tr:last-child td{
    border-width:0px 1px 0px 0px;
}.contracthistory tr td:last-child{
    border-width:0px 0px 1px 0px;
}.contracthistory tr:last-child td:last-child{
    border-width:0px 0px 0px 0px;
}
.contracthistory tr:first-child td{
    background-color:#aaaaaa;
    border:0px solid #e5e5e5;
    text-align:center;
    border-width:0px 0px 1px 1px;
    font-size:1em;
    font-family:;
    font-weight:600;
    color:#ffffff;
}
.contracthistory th{
    background-color:#4A85A3;
    border:0px solid #e5e5e5;
    text-align:center;
    border-width:0px 0px 1px 1px;
    font-size:1em;
    color:#ffffff;
    font-family: 'Raleway';
    font-weight:500;
}
.contracthistory tr:first-child:hover td{
    background-color:#4A85A3;
}
.contracthistory tr:first-child td:first-child{
    border-width:0px 0px 1px 0px;
}
.contracthistory tr:first-child td:last-child{
    border-width:0px 0px 1px 1px;
}
#ch_table table {
    border-collapse: collapse;
    border-spacing: 0;
    table-layout: fixed;
    width:1100px;
    height:100%;
    margin:0px;padding:0px;
}

#ch_table td {
    text-align: left;
    overflow: hidden;
    word-wrap:break-word;
}
#ch_table .contracthistory .vendor_name tr:hover td{
    background-color:#eeeeee;
}

#ch_table td.date_signed, #ch_table td.value {
    text-align:right;
    
}
#ch_table th.h_date_signed {
    width:80px;
    text-align: left;
    padding-left:7px;
    padding:10px;

}
#ch_table th.h_piid {
    width:120px;
    text-align: left;
    padding-left:10px;
}
#ch_table th.h_agency {
    width:190px;
    text-align: left;
    padding-left:10px;
}
#ch_table th.h_type {
    width:137px;
    text-align: left;
    padding-left:10px;
}
#ch_table th.h_value {
    width:112px;
    text-align: left;
    padding-left:10px;
}
#ch_table th.h_email_poc {
    width:259px;
    text-align: left;
    padding-left:10px;
}
#ch_table th.h_status {
    width:95px;
    text-align: left;
    padding-left:10px;
}
#ch_table th.h_naics {
    width:70px;
        border:0px solid #e5e5e5;
    text-align:center;
    border-width:0px 1px 1px 1px;
}
#ch_table td.naics {
    border:0px solid #e5e5e5;
    text-align:center;
    border-width:1px 1px 1px 1px;
}
#viewing_contracts  {
    float:left;
    width:100%;
    padding:13px;
    padding-left:0px;
    color:#666;
    display: none;
}
.viewing_contracts_current {
    color:#000;
    font-weight:600;
}
.viewing_contracts_total {
    color:#000;
    font-weight:600;
}
#pagination_container   {
    margin-left: auto;
    margin-right:auto;
    text-align: center;
    margin-top:15px;
}
.offscreen {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}
#skiptocontent a {
    padding:6px;
    position: absolute;
    top:-40px;
    left:0px;
    color:white !important;
    border-right:1px solid white;
    border-bottom:1px solid white;
    border-bottom-right-radius:8px;
    background:transparent;
    -webkit-transition: top 1s ease-out, background 1s linear;
    transition: top 1s ease-out, background 1s linear;
    z-index: 100;
}

#skiptocontent a:focus {
    position:absolute;
    left:0px;
    top:0px;
    background:#BF1722;
    outline:0;  
    -webkit-transition: top .1s ease-in, background .5s linear;
    transition: top .1s ease-in, background .5s linear;
}

